[package]
name = "apron-gateway"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = { version = "3", features=["rustls"] }
actix-web-actors = "3"
awc = "2"
env_logger = "0.9.0"
log = "0.4.14"
rustls = "0.20"
url = "2.2.2"
bincode = "1.3"

serde = { version = "1.0" }
serde_json = "1.0.59"
uuid = { version = "0.7", features = ["serde", "v4"] }
libp2p = "0.39.1"
futures = "0.3.1"
async-std = "1.10.0"
structopt = "0.3"
async-trait = "0.1"
