[package]
name = "apron-gateway"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
actix-web = "3.0"
serde = { version = "1.0" }
serde_json = "1.0.59"
uuid = { version = "0.7", features = ["serde", "v4"] }
libp2p = "0.39.1"
futures = "0.3.1"
async-std = "1.10.0"
structopt = "0.3"
actix-cors = "0.5.4"
