[package]
name = "forward_service"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = { version = "3", features=["rustls"] }
actix-web-actors = "3"
awc = "2"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
rustls = "0.20"
serde = "1.0.130"
serde_json = "1.0.68"
url = "2.2.2"
